# asseto

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  deploy.bat  docker-compose.yml  nginx.conf  supervisord.conf
backend/: README.md  pyproject.toml  requirements.txt  run_with_scheduler.py  start.bat
backend/app/: __init__.py
backend/app/api/v1/: config_routes.py  routes.py
backend/app/core/: app_config.py  database.py  tinydb_config.py
backend/app/models/: __init__.py  models.py
backend/app/schedule/: __init__.py  currency_rate_scheduler.py  longport_sync_scheduler.py  scheduler.py  stock_price_scheduler.py  total_asset_price_scheduler.py
backend/app/services/: __init__.py  longport.py  price_fetch.py
backend/app/util/: __init__.py  get_currency_rate.py  time_utils.py
backend/test/: README.md  init_db.py  run_all_tests.py  test_api.py  test_assets.py  test_base.py  test_config.py  test_pagination.py  test_price_fetch.py  test_runner.py  test_transactions.py  test_validation.py
doc/: 分页功能说明.md  右键菜单功能说明.md  后端API文档.md  数据库设计.md
frontend/: App.tsx  index.html  package-lock.json  package.json  tailwind.config.js  temp_delete_file_txt.tsx  tsconfig.json  vite.config.ts
frontend/components/: AssetDistribution.tsx  AssetTree.tsx  CurrencySelector.tsx  DataTable.tsx  DatePicker.tsx  HeroSection.tsx  Navigation.tsx  PriceAreaChart.tsx  SummaryCards.tsx
frontend/contexts/: CurrencyContext.tsx
frontend/guidelines/: Backend-CORS-Setup.md
frontend/services/: api.ts
frontend/styles/: globals.css
frontend/utils/: assetTypes.ts  assetUtils.ts  (+3 more)
(+8 files in other folders)
